--- a/2015-4-10/rails-test/app/views/posts/show.html.erb
+++ b/2015-4-10/rails-test/app/views/posts/show.html.erb
@@ -12,3 +12,10 @@
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+
+<h3>Reply:</h3>
+<ul>
+  <% @post.replies.each do |reply| %>
+  <li><%= reply.body %></li>
+  <% end -%>
+</ul>
