--- a/2015-4-10/rails-test/app/views/posts/index.html.erb
+++ b/2015-4-10/rails-test/app/views/posts/index.html.erb
@@ -2,12 +2,13 @@
 
 <h1>Listing Posts</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Title</th>
       <th>Body</th>
       <th>Clicks</th>
+      <th>Replies Count</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= post.title %></td>
         <td><%= post.body %></td>
         <td><%= post.clicks %></td>
+        <td><%= post.replies_count %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
