--- a/2015-4-10/rails-test/app/views/posts/show.html.erb
+++ b/2015-4-10/rails-test/app/views/posts/show.html.erb
@@ -1,21 +1,24 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+<h3><%= @post.title %></h3>
 
 <p>
-  <strong>Body:</strong>
   <%= @post.body %>
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<div class="pull-right">
+  <%= link_to 'Edit', edit_post_path(@post) %> |
+  <%= link_to 'Back', posts_path %>
+</div>
 
-<h3>Reply:</h3>
+<h3>Reply (<%= @post.replies_count %>):</h3>
 <ul>
   <% @post.replies.each do |reply| %>
   <li><%= reply.body %></li>
   <% end -%>
 </ul>
+
+<%= form_for Reply.new, url: reply_post_path do |f| %>
+  <%= f.text_area :body %>
+  <%= f.submit %>
+<% end -%>
