--- a/2015-4-10/rails-test/app/views/layouts/application.html.erb
+++ b/2015-4-10/rails-test/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 </head>
 <body>
 <div class="container">
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+<%= link_to "Sign out", destroy_user_session_path, data: { method: "delete" } if current_user %>
 <%= yield %>
 </div>
 </body>
