--- a/2015-4-10/rails-test/app/views/posts/index.html.erb
+++ b/2015-4-10/rails-test/app/views/posts/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th>Title</th>
       <th>Body</th>
+      <th>Author</th>
       <th>Clicks</th>
       <th>Replies Count</th>
       <th colspan="3"></th>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= post.title %></td>
         <td><%= post.body %></td>
+        <td><%= post.user.try(:email) || 'Anonymous User' %></td>
         <td><%= post.clicks %></td>
         <td><%= post.replies_count %></td>
         <td><%= link_to 'Show', post %></td>
@@ -25,7 +27,7 @@
     <% end %>
   </tbody>
 </table>
-
+<%= paginate @posts %>
 <br>
 
 <%= link_to 'New Post', new_post_path, 
